Add some page and user friend list function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/play
 spring.datasource.username=root
 spring.datasource.data-password=
+
+
+#mybatis.type-aliases-package=com.example.domain.model
+#mybatis.type-handlers-package=com.example.typehandler
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.default-fetch-size=100
+mybatis.configuration.default-statement-timeout=30
+
+
+spring.freemarker.template-loader-path=classpath:/templates
+spring.mvc.static-path-pattern=/static/**
