Add monitor stage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ mybatis.configuration.default-statement-timeout=30
 
 spring.freemarker.template-loader-path=classpath:/templates
 spring.mvc.static-path-pattern=/static/**
+
+endpoints.actuator.sensitive=false
+endpoints.metrics.sensitive=false
+endpoints.sensitive=false
+
+
+spring.application.name=play
