--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <stagemonitor.version>0.27.2</stagemonitor.version>
     </properties>
 
     <!-- Add typical dependencies for a web application -->
@@ -90,6 +91,51 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+        </dependency>
+
+        <!--monitor-->
+        <dependency>
+            <groupId>org.stagemonitor</groupId>
+            <artifactId>stagemonitor-web</artifactId>
+            <version>${stagemonitor.version}</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.stagemonitor</groupId>-->
+            <!--<artifactId>stagemonitor-ehcache</artifactId>-->
+            <!--<version>${stagemonitor.version}</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.stagemonitor</groupId>
+            <artifactId>stagemonitor-logging</artifactId>
+            <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.stagemonitor</groupId>
+            <artifactId>stagemonitor-os</artifactId>
+            <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.stagemonitor</groupId>
+            <artifactId>stagemonitor-requestmonitor</artifactId>
+            <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.stagemonitor</groupId>
+            <artifactId>stagemonitor-jdbc</artifactId>
+            <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.stagemonitor</groupId>
+            <artifactId>stagemonitor-alerting</artifactId>
+            <version>${stagemonitor.version}</version>
         </dependency>
     </dependencies>
 
